# AWS-CapacityForecaster

./: .gitignore  .sagemakerignore  README.md  SageMaker_jobs.url  env_setter.ps1  fetch_logs.py  full_logs.txt  logs.json  pyproject.toml  requirements.txt
.agent/: constitution.md  project_context.md  project_memory.md  rules.md
Docs/: 000001.SDLC.md  00001.Project1_planning.md  00002.aws_added_To_Project1.md
config/: config.yaml
demos/: demo_aws_utils.py  demo_config.py  demo_data_utils.py  demo_ml_utils.py
docs/: 00002.projectRoot.md  00007.data_scouting_generation.md  0001-high-level-requirements.md  0003.SRS.md  0004.Architecture.md  DATA_GENERATION_GUIDE.md
logs/: debug_job.txt  debug_job_2.txt  debug_job_3.txt  debug_job_4.txt  debug_job_5.txt  debug_job_6.txt  debug_job_7.txt  debug_job_legacy_fail.txt  module_02_data_load.log.2026-01-25  module_02_data_load.log.2026-01-27  module_02_data_load.log.2026-01-28  module_03_etl_feature_eng.log.2026-01-27  module_03_etl_feature_eng.log.2026-01-28  module_04_model_training.log.2026-01-25  module_04_model_training.log.2026-01-27  module_04_model_training.log.2026-01-28  module_05_risk_capacity_analysis.log.2026-01-27  module_05_risk_capacity_analysis.log.2026-01-28
my_Docs/: 00004.01planning.md  00005.WhyThisVsHorizonScale.md  00006.Data_recomendations.md  00008.Project.Next_Steps.md  00009.Project.assessment.md  00010.Cloud_First.md  00011.components.left.md  00012.pipeLine.md  00013.Update.modular.pipeline.md  00013.modular.pipeline.md  AmazonForecast_Deprecated.md  EXECUTION_SUMMARY.md  projectList.md  (+1 more)
(+84 files in other folders)
